# pathtracer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/inputs/: box_scene.txt  fresnel_transmission.txt  outside_scene.txt  phong.txt  sphere_in_box.txt
src/: Camera.h  Image.cpp  Image.h  ImageUtils.cpp  ImageUtils.h  Pathtracer.cpp  Pathtracer.h  PngWriter.h  PpmWriter.hpp  Ray.hpp  Raytracer.cpp  Raytracer.hpp  Scene.hpp  SceneParser.cpp  SceneParser.hpp
src/BoundingVolume/: BoundingBox.cpp  BoundingBox.h  BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchy.h
src/Geometry/: Cylinder.cpp  Cylinder.h  Extent.h  Geometry.h  Hittable.h  Mesh.cpp  Mesh.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.hpp
src/Light/: AreaLight.h  DirectionalLight.h  EmissionLight.h  Light.h  PointLight.h  Skylight.h
src/MathUtils/: Sampler.cpp  Sampler.h  Utils.h
src/Texture/: BRDF.h  BlinnPhong.h  Emission.h  FresnelTransmission.h  Lambertian.h  Material.cpp  Material.h  Phong.h  Reflection.h  Texture.cpp  Texture.h  Transmission.h
